tests/matrices/invalid/invalid_bad_value_2.mtx
%%MatrixMarket vector array real general
4
101
202
foooooo
404
